package Lab2.src;

public enum TipoAsiento {
    VIP,
    General
}
